--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
     />
     <link href='https://fonts.googleapis.com/css?family=Pixelify Sans' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Varela' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
+
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
